--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: python
 python:
   - "3.5"
 before_install:
-  - sudo apt-get update
-  - sudo apt-get install -y golang
+  - eval "$(curl -sL https://raw.githubusercontent.com/travis-ci/gimme/master/gimme | GIMME_GO_VERSION=1.6 bash)"
+  - mkdir gocode
+  - export GOPATH=$(pwd)/gocode
+  - export PATH=$GOPATH/bin:$PATH
 install:
   - go get github.com/constabulary/gb/...
   - pip install -r requirements_dev.txt coveralls
