make integration tests a little less flaky

--- a/tests/fixtures/codegen/echo.yaml
+++ b/tests/fixtures/codegen/echo.yaml
@@ -5,7 +5,7 @@ targets:
     out: echo.go/src/server/echo.go
 commands:
   - gb build all
-  - bin/echo
+entrypoint: bin/echo
 
 endpoint: http://localhost:9090/echo
 cases:
