ignore F811 and clean up usages of # noqa

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,6 @@ addopts = --cov cedar --cov-report html
 
 [flake8]
 exclude =
-ignore = F403
+ignore = F403,F811
 max-complexity = 12
 max-line-length = 120
